@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-07T08:18:38Z",
-  "count_outdated" : 6579,
-  "uniques_outdated" : 2553,
-  "count" : 6775,
+  "timestamp" : "2024-02-07T16:20:56Z",
+  "count_outdated" : 6583,
+  "uniques_outdated" : 2555,
+  "count" : 6776,
   "uniques" : 2696,
   "clones" : [
-    {
-      "timestamp": "2024-01-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 3, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2024-01-25T00:00:00Z",
       "count": 14,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
